--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/FinischerProductSelect.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/FinischerProductSelect.cshtml
@@ -109,7 +109,7 @@
                                                 }
                                             }
 
-                                             <h6>Mit: @ViewBag.DoppelOption[DoppelCounter]</h6>
+                                             // <h6>Mit: @ViewBag.DoppelOption[DoppelCounter]</h6>
                                             
                                            
                                             DoppelCounter++;
@@ -138,10 +138,10 @@
                                                           <h6>Außenlänge (B):@ViewBag.KnayflIntern[KnayfCounter] </h6>
                                                     }
                                                 }
-                                                    @foreach (var listOption in ViewBag.DoppelOption)
-                                                {
-                                                        <h6>Mit: @listOption</h6>
-                                                }
+                                                //     @foreach (var listOption in ViewBag.DoppelOption)
+                                                // {
+                                                //         <h6>Mit: @listOption</h6>
+                                                // }
 
                                                 KnayfCounter++;
                                                 DoorCount++;
@@ -167,10 +167,10 @@
                                                          <h6>Außenlänge (A):@ViewBag.HalbAussen[HablCounter]</h6>
                                                 }
 
-                                                      @foreach (var listOption in ViewBag.DoppelOption)
-                                                  {
-                                                            <h6>Mit: @listOption</h6>
-                                                  }
+                                                  //     @foreach (var listOption in ViewBag.DoppelOption)
+                                                  // {
+                                                  //           <h6>Mit: @listOption</h6>
+                                                  // }
 
                                             HablCounter++;
                                             DoorCount++;
@@ -190,10 +190,10 @@
                                             {
                                                      <h6><strong> @ViewBag.HelbName[HebelCounter]</strong></h6>
                                                     <br/>
-                                                    @foreach (var listOption in ViewBag.DoppelOption)
-                                                {
-                                                        <h6>Mit: @listOption</h6>
-                                                }
+                                                //     @foreach (var listOption in ViewBag.DoppelOption)
+                                                // {
+                                                //         <h6>Mit: @listOption</h6>
+                                                // }
 
                                                 HebelCounter++;
                                                 DoorCount++;
@@ -217,10 +217,10 @@
                                                 {
                                                          <h6>Außenlänge (A): @ViewBag.VorhanAussen[VorhanCounter]</h6>
                                                 }
-                                                        @foreach (var listOption in ViewBag.DoppelOption)
-                                                    {
-                                                            <h6>Mit: @listOption</h6>
-                                                    }
+                                                    //     @foreach (var listOption in ViewBag.DoppelOption)
+                                                    // {
+                                                    //         <h6>Mit: @listOption</h6>
+                                                    // }
 
                                                 VorhanCounter++;
                                                 DoorCount++;
@@ -239,10 +239,10 @@
                                             {
                                                      <h6><strong> @ViewBag.AussenName[AussenCounter]</strong></h6>
                                                  <br/>
-                                                    @foreach (var listOption in ViewBag.DoppelOption)
-                                                {
-                                                        <h6>Mit: @listOption</h6>
-                                                }
+                                                //     @foreach (var listOption in ViewBag.DoppelOption)
+                                                // {
+                                                //         <h6>Mit: @listOption</h6>
+                                                // }
 
                                                 AussenCounter++;
                                                 DoorCount++;
