--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
@@ -45,7 +45,7 @@
             <div id="numerKey">
         <h3>Schlüssel Nr.@z </h3>
          </div>
-                @* <div id="OpenValue">
+              <div id="OpenValue">
                     @{
                         int valueKeyBool = ViewBag.KeyValue.Count / ViewBag.Order.Count;
                         @for (int f = 0; f < valueKeyBool; f++)
@@ -69,7 +69,7 @@
 
                         }
                     }
-                </div> *@
+                </div> 
             </div>
             
     } 
