--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
@@ -4,12 +4,7 @@
 @{
     ViewData["Title"] = $"System_Auswählen/{@Model.userKey}";
 }
-@if (TempData["AlertMessage"] != null)
-{
-    <script>
-        alert("@TempData["AlertMessage"]");
-    </script>
-}
+
     <div>
         <h3>
             System auswählen
@@ -391,9 +386,7 @@
             }
         }
     </form>
-
+    <div id="loader" style="display: none;">
+  
+</div>
         </div>
-
- <script>
-     
-</script>
