--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/FinischerProductSelect.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/FinischerProductSelect.cshtml
@@ -37,7 +37,9 @@
                             <div class="TexCount">
                                 <h6>@counterKey</h6>
                                 <div id="TexInputKey">
+                                    <input id="inputA" name="NameKey" value='@list.ForNameKey' type="text" />
                                     <input id="inputS" name="NameKey" value='@list.NameKey' type="text" />
+                                   
                                 </div>
                                 <div>
                                     <input id="inputCount" name="CountKey" value="@list.CountKey" type="text" />
@@ -85,10 +87,13 @@
                                                 <h5 style="margin-top: 10px;margin-left: 2px;">
                                                     @DoorCount
                                                 </h5>
-                                                <h5 id="counterTur"><strong> @ViewBag.Tur[DorItem]</strong></h5>
+                                                <h5 id="counterTur"><strong> @ViewBag.Tur[DorItem]</strong></h5> 
                                             </div>
                                             @if (ViewBag.DopelZylinder.Count > 0)
                                             {
+                                                <h5>Count:@ViewBag.TurCount[DorItem]</h5>
+                                                <h5>Ssl:@ViewBag.Ssl[DorItem]</h5>
+
                                                 <h6><strong> @ViewBag.DopelZylinder[DoppelCounter]</strong></h6>
                                                 <br />
                                                 if (ViewBag.DoppelAussen.Count > 0)
@@ -120,9 +125,12 @@
                                                     @DoorCount
                                                 </h5>
                                                 <h5 id="counterTur"><strong> @ViewBag.Tur[DorItem]</strong></h5>
+                                               
                                             </div>
                                             if (ViewBag.KnayfName.Count > 0)
                                             {
+                                                <h5>Count:@ViewBag.TurCount[DorItem]</h5>
+                                                <h5>Ssl:@ViewBag.Ssl[DorItem]</h5>
                                                 <h6><strong> @ViewBag.KnayfName[KnayfCounter]</strong></h6>
                                                 <br />
                                                 if (ViewBag.KnayfAussen.Count > 0)
@@ -161,6 +169,8 @@
                                             </div>
                                             @if (ViewBag.HalbName.Count > 0)
                                             {
+                                                <h5>Count:@ViewBag.TurCount[DorItem]</h5>
+                                                <h5>Ssl:@ViewBag.Ssl[DorItem]</h5>
                                                 <h6><strong> @ViewBag.HalbName[HablCounter]</strong></h6>
                                                 <br />
                                                 if (ViewBag.HalbAussen.Count > 0)
@@ -193,6 +203,8 @@
 
                                             @if (ViewBag.HelbName.Count > 0)
                                             {
+                                                <h5>Count:@ViewBag.TurCount[DorItem]</h5>
+                                                <h5>Ssl:@ViewBag.Ssl[DorItem]</h5>
                                                 <h6><strong> @ViewBag.HelbName[HebelCounter]</strong></h6>
                                                 <br />
                                                 if (ViewBag.HebelOptionSelected.Count>0)
@@ -220,6 +232,8 @@
                                             </div>
                                             @if (ViewBag.VorhanName.Count > 0)
                                             {
+                                                <h5>Count:@ViewBag.TurCount[DorItem]</h5>
+                                                <h5>Ssl:@ViewBag.Ssl[DorItem]</h5>
                                                 <h6><strong> @ViewBag.VorhanName[VorhanCounter]</strong></h6>
                                                 <br />
                                                 @if (ViewBag.VorhanAussen.Count > 0)
@@ -249,6 +263,8 @@
                                             </div>
                                             if (ViewBag.AussenName.Count > 0)
                                             {
+                                                <h5>Count:@ViewBag.TurCount[DorItem]</h5>
+                                                <h5>Ssl:@ViewBag.Ssl[DorItem]</h5>
                                                 <h6><strong> @ViewBag.AussenName[AussenCounter]</strong></h6>
                                                 <br />
 
@@ -325,7 +341,7 @@
 
             @if (User.IsInRole("client") || User.IsInRole("admin"))
             {
-                <a class="btn btn-danger" href="@Url.Action("SaveUserOrders", "Konfigurator", new {HalbOption = @ViewBag.HalbOptionSelected,VorhnaOption = @ViewBag.VorhanOptionSelected,AussenOption = @ViewBag.AussenOptionSelected,DoppelOption = @ViewBag.DoppelOption,KnayfOption = @ViewBag.KnayfOptionSelected,HebelOption = @ViewBag.HebelOptionSelected,countKey = @ViewBag.CountKey,key = @ViewBag.NameKey,keyIsOpen = @ViewBag.IsOpen,cost = ViewBag.SumCosted,TurName = @ViewBag.Tur,userInfo = @ViewBag.UserNameItem,nameKey = @ViewBag.Key, DopelName = @ViewBag.DopelZylinder,DoppelAussen=@ViewBag.DoppelAussen,DoppelIntern=@ViewBag.DoppelIntern,KnayfName = @ViewBag.KnayfName,KnayfAussen = @ViewBag.KnayfAussen,KnayfIntern = @ViewBag.KnayflIntern,HalbName = @ViewBag.HalbName,HalbAussen = @ViewBag.HalbAussen,HelbName = @ViewBag.HelbName, VorhanName=@ViewBag.VorhanName, VorhanAussen = @ViewBag.VorhanAussen, AussenName = @ViewBag.AussenName})">
+                <a class="btn btn-danger" href="@Url.Action("SaveUserOrders", "Konfigurator", new {FurKey=@ViewBag.FurKey,TurCounter = @ViewBag.TurCount,Ssl = @ViewBag.Ssl,HalbOption = @ViewBag.HalbOptionSelected,VorhnaOption = @ViewBag.VorhanOptionSelected,AussenOption = @ViewBag.AussenOptionSelected,DoppelOption = @ViewBag.DoppelOption,KnayfOption = @ViewBag.KnayfOptionSelected,HebelOption = @ViewBag.HebelOptionSelected,countKey = @ViewBag.CountKey,key = @ViewBag.NameKey,keyIsOpen = @ViewBag.IsOpen,cost = @ViewBag.SumCosted,TurName = @ViewBag.Tur,userInfo = @ViewBag.UserNameItem,nameKey = @ViewBag.Key, DopelName = @ViewBag.DopelZylinder,DoppelAussen=@ViewBag.DoppelAussen,DoppelIntern=@ViewBag.DoppelIntern,KnayfName = @ViewBag.KnayfName,KnayfAussen = @ViewBag.KnayfAussen,KnayfIntern = @ViewBag.KnayflIntern,HalbName = @ViewBag.HalbName,HalbAussen = @ViewBag.HalbAussen,HelbName = @ViewBag.HelbName, VorhanName=@ViewBag.VorhanName, VorhanAussen = @ViewBag.VorhanAussen, AussenName = @ViewBag.AussenName})">
                     IN DEN WARENKORB
                 </a>
 
